# cli

./: Bakefile.sh  Cargo.toml  README.md
src/: cli.rs  main.rs  util.rs
src/subcommands/: build.rs  install.rs  mod.rs  run.rs
