[package]
description = "A knowledge management system to solve all my personal needs."
name = "quasipanacea-cli"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/quasipanacea/cli"
license = "GPL-2.0"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
